force-app/main/default/objects/SVF__mdt/Svf__mdt.object-meta.xml
<CustomObject>
    <label>SVF</label>
</CustomObject>