force-app/main/default/objects/SVF__mdt/fields/PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>PrivateKey__c</fullName>
    <label>秘密鍵</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>