force-app/main/default/objects/SVF__mdt/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>タイムゾーン</label>
    <length>80</length>
    <type>Text</type>
</CustomField>